crates/hwp-core/tests/snapshots/snapshot_tests__lists_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">글머리표</span></p>
<p class="bullet"><span style="font-size: 10.0pt; font-family: '바탕'">1</span></p>
<p class="bullet"><span style="font-size: 10.0pt; font-family: '바탕'">2</span></p>
<p class="bullet"><span style="font-size: 10.0pt; font-family: '바탕'">3</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">글머리표 두 번째</span></p>
<p class="bullet"><span style="font-size: 10.0pt; font-family: '바탕'">1</span></p>
<p class="bullet"><span style="font-size: 10.0pt; font-family: '바탕'">2</span></p>
<p class="bullet"><span style="font-size: 10.0pt; font-family: '바탕'">3</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">문단번호</span></p>
<p class="number-1"><span class="number">제1장</span> <span style="font-size: 10.0pt; font-family: '바탕'">1</span></p>
<p class="number-1"><span class="number">제2장</span> <span style="font-size: 10.0pt; font-family: '바탕'">2</span></p>
<p class="number-2"><span class="number">제1절</span> <span style="font-size: 10.0pt; font-family: '바탕'">2-1</span></p>
<p class="number-1"><span class="number">제3장</span> <span style="font-size: 10.0pt; font-family: '바탕'">3</span></p>
<p class="number-2"><span class="number">제1절</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-1</span></p>
<p class="number-2"><span class="number">제2절</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2</span></p>
<p class="number-3"><span class="number">제1항</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-1</span></p>
<p class="number-3"><span class="number">제2항</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-2</span></p>
<p class="number-3"><span class="number">제3항</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-3</span></p>
<p class="number-1"><span class="number">제4장</span> <span style="font-size: 10.0pt; font-family: '바탕'">4</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">문단번호 두 번째 (번호 이어짐)</span></p>
<p class="number-1"><span class="number">제5장</span> <span style="font-size: 10.0pt; font-family: '바탕'">5</span></p>
<p class="number-2"><span class="number">제1절</span> <span style="font-size: 10.0pt; font-family: '바탕'">5-1</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">문단번호 세 번째 (새 번호)</span></p>
<p class="number-1"><span class="number">1.</span> <span style="font-size: 10.0pt; font-family: '바탕'">1</span></p>
<p class="number-1"><span class="number">2.</span> <span style="font-size: 10.0pt; font-family: '바탕'">2</span></p>
<p class="number-2"><span class="number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">2-1</span></p>
<p class="number-1"><span class="number">3.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3</span></p>
<p class="number-2"><span class="number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-1</span></p>
<p class="number-2"><span class="number">나.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2</span></p>
<p class="number-3"><span class="number">1)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-1</span></p>
<p class="number-3"><span class="number">2)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-2</span></p>
<p class="number-3"><span class="number">3)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-3</span></p>
<p class="number-1"><span class="number">4.</span> <span style="font-size: 10.0pt; font-family: '바탕'">4</span></p>
<hr class="page-break">
<p><span style="font-size: 10.0pt; font-family: '바탕'">개요</span></p>
<h1 class="outline-1"><span class="outline-number">1.</span> <span style="font-size: 10.0pt; font-family: '바탕'">1</span></h1>
<h1 class="outline-1"><span class="outline-number">2.</span> <span style="font-size: 10.0pt; font-family: '바탕'">2</span></h1>
<h2 class="outline-2"><span class="outline-number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">2-1</span></h2>
<h1 class="outline-1"><span class="outline-number">3.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3</span></h1>
<h2 class="outline-2"><span class="outline-number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-1</span></h2>
<h2 class="outline-2"><span class="outline-number">나.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2</span></h2>
<h3 class="outline-3"><span class="outline-number">1)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-1</span></h3>
<h3 class="outline-3"><span class="outline-number">2)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-2</span></h3>
<h3 class="outline-3"><span class="outline-number">3)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-3</span></h3>
<h1 class="outline-1"><span class="outline-number">4.</span> <span style="font-size: 10.0pt; font-family: '바탕'">4</span></h1>
<p><span style="font-size: 10.0pt; font-family: '바탕'">개요 두 번째 (번호 이어짐)</span></p>
<h1 class="outline-1"><span class="outline-number">5.</span> <span style="font-size: 10.0pt; font-family: '바탕'">5</span></h1>
<h2 class="outline-2"><span class="outline-number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">5-1</span></h2>
<p><span style="font-size: 10.0pt; font-family: '바탕'">개요 세 번째 (새 번호)</span></p>
<hr class="section-break">
<h1 class="outline-1"><span class="outline-number">6.</span> <span style="font-size: 10.0pt; font-family: '바탕'">1</span></h1>
<h1 class="outline-1"><span class="outline-number">7.</span> <span style="font-size: 10.0pt; font-family: '바탕'">2</span></h1>
<h2 class="outline-2"><span class="outline-number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">2-1</span></h2>
<h1 class="outline-1"><span class="outline-number">8.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3</span></h1>
<h2 class="outline-2"><span class="outline-number">가.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-1</span></h2>
<h2 class="outline-2"><span class="outline-number">나.</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2</span></h2>
<h3 class="outline-3"><span class="outline-number">1)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-1</span></h3>
<h3 class="outline-3"><span class="outline-number">2)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-2</span></h3>
<h3 class="outline-3"><span class="outline-number">3)</span> <span style="font-size: 10.0pt; font-family: '바탕'">3-2-3</span></h3>
<h1 class="outline-1"><span class="outline-number">9.</span> <span style="font-size: 10.0pt; font-family: '바탕'">4</span></h1>
</div>
