crates/hwp-core/tests/snapshots/snapshot_tests__lists_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



글머리표

- 1

- 2

- 3

글머리표 두 번째

- 1

- 2

- 3

문단번호

1. 1

2. 2

  가. 2-1

3. 3

  가. 3-1

  나. 3-2

    1) 3-2-1

    2) 3-2-2

    3) 3-2-3

4. 4

문단번호 두 번째 (번호 이어짐)

5. 5

  가. 5-1

문단번호 세 번째 (새 번호)

6. 1

7. 2

  가. 2-1

8. 3

  가. 3-1

  나. 3-2

    1) 3-2-1

    2) 3-2-2

    3) 3-2-3

9. 4

---

개요

# 10. 1

# 11. 2

## 가. 2-1

# 12. 3

## 가. 3-1

## 나. 3-2

### 1) 3-2-1

### 2) 3-2-2

### 3) 3-2-3

# 13. 4

개요 두 번째 (번호 이어짐)

# 14. 5

## 가. 5-1

개요 세 번째 (새 번호)

---

# 15. 1

# 16. 2

## 가. 2-1

# 17. 3

## 가. 3-1

## 나. 3-2

### 1) 3-2-1

### 2) 3-2-2

### 3) 3-2-3

# 18. 4
