crates/hwp-core/tests/snapshots/snapshot_tests__lists_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



글머리표

- 1

- 2

- 3

글머리표 두 번째

- 1

- 2

- 3

문단번호

제1장 1

제2장 2

  제1절 2-1

제3장 3

  제1절 3-1

  제2절 3-2

    제1항 3-2-1

    제2항 3-2-2

    제3항 3-2-3

제4장 4

문단번호 두 번째 (번호 이어짐)

제5장 5

  제1절 5-1

문단번호 세 번째 (새 번호)

1. 1

2. 2

  가. 2-1

3. 3

  가. 3-1

  나. 3-2

    1) 3-2-1

    2) 3-2-2

    3) 3-2-3

4. 4

---


개요

# 1. 1

# 2. 2

## 가. 2-1

# 3. 3

## 가. 3-1

## 나. 3-2

### 1) 3-2-1

### 2) 3-2-2

### 3) 3-2-3

# 4. 4

개요 두 번째 (번호 이어짐)

# 5. 5

## 가. 5-1

개요 세 번째 (새 번호)

---


# 6. 1

# 7. 2

## 가. 2-1

# 8. 3

## 가. 3-1

## 나. 3-2

### 1) 3-2-1

### 2) 3-2-2

### 3) 3-2-3

# 9. 4
