crates/hwp-core/tests/snapshots/snapshot_tests__matrix_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<div class="hwp-textbox"></div><div class="hwp-textbox"></div><div class="hwp-textbox"></div>
</div>
